--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a class="btn-login" href="login.html">Login</a>
   <h2>Cursos</h2>
 
-  <div id="cursos">
+  <div id="courses">
     <!-- <div class="curso">
       <h3>Nome</h3>
       <p>Carga horária: XX horas</p>
