set token in cookie

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="user">
   </div>
-  <a class="btn-login" href="login.html">Login</a>
+  <a class="btn-login" id="login-logout" href="#">Login</a>
   <h2>Cursos</h2>
 
   <div id="courses">
@@ -25,6 +25,7 @@
     </div> -->
   </div>
 </body>
+<script src="js/index.js"></script>
 <script src="js/courses.js"></script>
 
 </html>
